[project]
name            = "cairo_utils"
version         = "0.0.1"
description     = "Utils for drawing Inconvergent-esque images"
readme          = "README.md"
requires-python = ">=3.10"
license         = {file = "LICENSE"}
keywords        = ["numpy", "art", "cairo", "inconvergent", "DCEL"]
authors         = [
    {email = "jgrey4296@gmail.com"},
    {name  = "J Grey"}
]
classifiers     = [
    "Programming Language :: Python :: 3.10"
]

dependencies   = [
   "pycairo >= 1.21.0",
   # "cairo >= 1.14.12",
   "imageio >= 2.6.1",
   "noise >= 1.2.2",
   "numpy >= 1.18.1",
   "Pillow >= 7.1.2",
   "scipy >= 1.4.1"
]

[project.optional-dependencies]
test = [
    "pytest > 7.0.0",
]

[project.urls]
homepage      = "https://github.com/jgrey4296/cairo_utils"
documentation = "https://readthedocs.org/cairo_utils"
repository    = "https://github.com/jgrey4296/cairo_utils"
changelog     = "https://github.com/jgrey4296/cairo_utils/blob/master/CHANGELOG.md"

[project.scripts]
# todo: add template generation scripts

[project.gui-scripts]
# spam-gui      = "spam:main_gui"

[project.entry-points."nothing"]
# tomatoes      = "spam:main_tomatoes"

[tool.pytest.ini_options]
log_cli       = false
log_level     = "INFO"
log_cli_level = "WARN"
log_format    = "%(levelname)s %(name)s : %(message)s"

[build-system]
requires = [
         "setuptools >= 63.1.0",
         "wheel >= 0.37.1"
]

build-backend = "setuptools.build_meta"

[tool.setuptools]
# packages = ['cairo_utils']
include-package-data = true

[tool.setuptools.packages.find]
namespaces = true
where = ["."]

[tool.setuptools.package-data]

[tool.setuptools.exclude-package-data]



[tool.pyright]
# strict = cairo_utils.*
verboseOutput               = true
typeCheckingMode            = "strict"
pythonVersion               = "3.10"

reportUnusedImport          = false
reportAssertAlwaysTrue      = "information"
reportMissingParameterType  = "warning"
reportMissingTypeArgument   = "warning"
reportMissingTypeStubs      = "warning"
reportUnknownMemberType     = "warning"
reportUnknownParameterType  = "information"
reportUnknownVariableType   = "warning"
reportUnnecessaryCast       = "information"
reportUnnecessaryIsInstance = "warning"
